--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -71,19 +71,19 @@ jobs:
       - name: Upload Release APK
         uses: actions/upload-artifact@v2
         with:
-          name: StatusBarLyric_release
+          name: InkSay_release
           path: ${{ steps.sign_release.outputs.signedReleaseFile }}
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v2
         with:
-          name: StatusBarLyric_debug
+          name: InkSay_debug
           path: ${{ steps.sign_debug.outputs.signedReleaseFile }}
 
       - name: Upload Release Mapping
         uses: actions/upload-artifact@v2
         with:
-          name: StatusBarLyric_release_mapping
+          name: InkSay_release_mapping
           path: ./app/build/outputs/mapping/release/mapping.txt
 #
 #      - name: Post to channel
