--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cn.inksay.xiaowine">
+          xmlns:tools="http://schemas.android.com/tools" package="cn.inksay.xiaowine">
 
     <application
             android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round">
+            android:label="@string/App_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            tools:ignore="AllowBackup">
+
         <activity
-                android:name="cn.inksay.xiaowine.activity.MainActivity"
-                android:exported="true">
+                android:name="cn.inksay.xiaowine.activity.SettingActivity"
+                android:exported="true"
+                android:screenOrientation="portrait"
+                tools:ignore="LockedOrientationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="de.robv.android.xposed.category.MODULE_SETTINGS"/>
+            </intent-filter>
+        </activity>
+
+        <activity-alias
+                android:name=".launcher"
+                android:enabled="true"
+                android:exported="true"
+                android:targetActivity="cn.inksay.xiaowine.activity.SettingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
+        </activity-alias>
+
+        <service
+                android:name=".service.QuickTitleService"
+                android:exported="true"
+                android:icon="@mipmap/ic_launcher"
+                android:label="@string/QuickTitle"
+                android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
 
         <meta-data
                 android:name="xposedmodule"
                 android:value="true"/>
         <meta-data
                 android:name="xposeddescription"
-                android:value="@string/xposed_desc"/>
+                android:value="@string/Xposed_desc"/>
         <meta-data
                 android:name="xposedminversion"
                 android:value="93"/> <!-- xposed-scope here -->
